force-app/main/default/objects/Config_Enedis__c/Config_Enedis__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Config_Enedis</label>
</CustomObject>