force-app/main/default/objects/Config_Enedis__c/fields/Endpoint_ConsulterDonneeTech__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_ConsulterDonneeTech__c</fullName>
    <label>Endpoint_ConsulterDonneeTech</label>
    <length>255</length>
    <type>Text</type>
</CustomField>