force-app/main/default/objects/Config_Enedis__c/fields/Endpoint_ConsulterMesure__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_ConsulterMesure__c</fullName>
    <label>Endpoint_ConsulterMesure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>