force-app/main/default/objects/Config_Enedis__c/fields/Endpoint_M023_Fines__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_M023_Fines__c</fullName>
    <label>Endpoint M023 Fines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>