force-app/main/default/objects/Config_Enedis__c/fields/timeout__c.field-meta.xml
<CustomField>
    <fullName>timeout__c</fullName>
    <label>timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>